# backend/docs/swagger.json
@@ -596,37 +596,6 @@
                 }
             }
         },
-        "/api/gold/summary": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "gold"
-                ],
-                "operationId": "GoldSummary",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/GoldSummaryRes"
-                        }
-                    }
-                }
-            }
-        },
         "/api/gold/tax": {
             "get": {
                 "consumes": [
@@ -1218,6 +1187,15 @@
                     "wallet"
                 ],
                 "operationId": "ListWallets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1256,6 +1234,13 @@
                 ],
                 "operationId": "CreateWallet",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "body",
                         "name": "body",
@@ -1312,6 +1297,13 @@
                 ],
                 "operationId": "GetWallet",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Wallet ID",
@@ -1370,6 +1362,13 @@
                 ],
                 "operationId": "UpdateWallet",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Wallet ID",
@@ -1437,6 +1436,13 @@
                 ],
                 "operationId": "DeleteWallet",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Wallet ID",
@@ -1775,21 +1781,6 @@
                     "type": "integer"
                 },
                 "total_weight": {
-                    "type": "number"
-                }
-            }
-        },
-        "GoldSummaryRes": {
-            "type": "object",
-            "required": [
-                "total_grams",
-                "total_value"
-            ],
-            "properties": {
-                "total_grams": {
-                    "type": "number"
-                },
-                "total_value": {
                     "type": "number"
                 }
             }
