# backend/internal/dto/gold.go
@@ -9,11 +9,3 @@ type Gold struct {
 	SellPrice float64     `json:"sell_price"`
 	Profit    float64     `json:"profit"`
 }
-
-// GoldSummary represents gold summary response DTO
-// @name GoldSummary
-type GoldSummary struct {
-	TotalGrams float64 `json:"total_grams"`
-	TotalValue float64 `json:"total_value"`
-	// ByType     map[string]interface{} `json:"by_type"`
-}
